--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
+    "react-spinner": "^0.2.7",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
